--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - run: cd containers
     - name: Build the Docker image
-      run: |
-        cd containers
-        docker build . --file Dockerfile --tag MtgCollectionCurator:$(date +%s)
+      run: docker build . --file Dockerfile --tag mtgcollectioncurator:$(date +%s)
+    
