--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,5 +17,14 @@ jobs:
     - name: Build the Docker image
       run: |
         cd containers
-        docker build . --file Dockerfile --tag mtgcollectioncurator:$(date +%s)
+        docker build . --file Dockerfile --tag ghcr.io/MatthewWheels/mtgcollectioncurator:latest
+    - name: Log in to the container registry
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.GITHUBCR_USERNAME }}
+        password: ${{ secrets.GITHUBCR_PASSWORD }}
+    - name: Push the Docker image to the container registry
+      run: |
+        cd containers
+        docker push ghcr.io/MatthewWheels/mtgcollectioncurator:latest
     
