--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,8 +21,9 @@ jobs:
     - name: Log in to the container registry
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.GITHUBCR_USERNAME }}
-        password: ${{ secrets.GITHUBCR_PASSWORD }}
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Push the Docker image to the container registry
       run: |
         cd containers
