--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,8 @@ jobs:
       run: |
         cd containers
         docker build . --file Dockerfile --tag ghcr.io/matthewwheels/mtgcollectioncurator:latest
-    - name: Log in to the container registry
-      uses: docker/login-action@v2
+    - name: Log in to the Container registry
+      uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
